fix for sharing overflow

--- a/documents/css/app.css
+++ b/documents/css/app.css
@@ -640,6 +640,7 @@ textarea.email-text {
 }
 .sharepeople-input .select2-container {
     width: 100%;
+    height: 100%;
 }
 .shareForm > .controls {
     padding-top: 20px;
